{
    "name": "UI",
    "maps": [
        {
            "name": "Inventory",
            "id": "7c765b3f-7827-4a8e-9f0c-a2018a9b3d06",
            "actions": [
                {
                    "name": "InventoryToggle",
                    "type": "Button",
                    "id": "4ecea1b5-c192-4814-bce6-fd91597c10ea",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UIItemRightRotate",
                    "type": "Button",
                    "id": "d26ea4f5-60b4-4d60-b5a7-7f7ab5063ccf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UIItemLeftRotate",
                    "type": "Button",
                    "id": "b46e8d27-8d27-492f-9bc8-b54adb9ffa74",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d9ae4096-6977-420e-8766-d9d7ae5a34e7",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "InventoryToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8f584e5-15ee-460d-80aa-90e66e816e3c",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UIItemRightRotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9475acc5-f75e-4621-ab84-7b08f9d418cf",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UIItemLeftRotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}